--- a/ArticleVisualisation.WebMvc/ArticleVisualisation.WebMvc.csproj
+++ b/ArticleVisualisation.WebMvc/ArticleVisualisation.WebMvc.csproj
@@ -187,6 +187,7 @@
         <Content Include="Content\Site.css"/>
         <Content Include="Scripts\bootstrap.js"/>
         <Content Include="Scripts\bootstrap.min.js"/>
+        <Content Include="Scripts\pdf.js" />
         <Content Include="Views\Article\Index.cshtml" />
         <None Include="Scripts\jquery-3.3.1.intellisense.js"/>
         <Content Include="Scripts\jquery-3.3.1.js"/>
